# poll_learn_frontend_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: wsgi.py
config/settings/: base.py
